# Claude-AGI

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  claude-agi.py  pyproject.toml  requirements-test.txt  requirements.txt  run_tui.sh  start_tui.sh
.github/workflows/: agi-tests.yml  agi-tests.yml.backup  ci-pipeline.yml  manual-tests.yml  release-build.yml
configs/: development.yaml  monitoring.yaml  production.yaml
crumbs_llms/: crumb_claude4.yaml  crumb_gpt4o.md  crumb_grok3.md
database/migrations/: memory_versioning.sql  phase2_tables.sql
debug/: inspector.py
deployment/: requirements.yaml
deployment/docker/: Dockerfile  docker-compose.yml
deployment/kubernetes/: claude-agi-deployment.yaml  configmap.yaml  horizontal-pod-autoscaler.yaml  prometheus-rules.yaml  pvc.yaml  rbac.yaml  secrets.yaml  services.yaml
deployment/scripts/: disaster_recovery.sh  initial_deploy.sh
docs/: ARCHITECTURAL_IMPROVEMENTS.md  ARCHITECTURE_OVERVIEW.md  ARCHITECTURE_REFACTORING_PROGRESS.md  DOCUMENTATION_STATUS.md  GETTING_STARTED.md  IMPLEMENTATION_STATUS.md  MEMORY_REFACTORING_GUIDE.md  MEMORY_SYNCHRONIZATION_ARCHITECTURE.md  MEMORY_SYNCHRONIZATION_IMPLEMENTATION.md  MONITORING_SETUP.md  PERFORMANCE_OPTIMIZATION_GUIDE.md  PHASE_2_IMPLEMENTATION_GUIDE.md  PHASE_2_READINESS.md  PROJECT_STATUS_CONSOLIDATED.md  PROJECT_STRUCTURE.md  README.md  RUNNING_THE_TUI.md  SESSION_SUMMARY_2025-06-04.md  SESSION_SUMMARY_2025-06-04_EXTENDED.md  SESSION_SUMMARY_2025-06-04_SECURITY.md  SESSION_SUMMARY_2025-06-05.md  TESTING_GUIDE.md  TEST_EVOLUTION_HISTORY.md  TEST_STABILIZATION_GUIDE.md  TUI_TROUBLESHOOTING.md  claude-agi-technical-implementation.md  claude-agi-testing-framework.md
docs/archive/security/: SECURITY_HARDENING_CHECKLIST_OUTDATED.md
docs/archive/test-history/: DEFERRED_TEST_IMPLEMENTATIONS.md  TEST_FIXES_SUMMARY.md  TEST_STABILIZATION_GUIDE.md
emergency/: protocols.py
monitoring/prometheus/: prometheus.yml
operations/: backup.py  daily_tasks.py
ref_docs/: README.md  claude-agi-deployment-ops.md  claude-agi-ethical-safety.md  claude-agi-gantt-chart.md  claude-consciousness-agi-plan.md  claude-consciousness-tui.py
requirements/: requirements_advanced.txt  requirements_phase1.txt  requirements_phase2.txt  requirements_phase3.txt  requirements_phase4.txt
scripts/: ci-local.py  claude-consciousness-tui.py  enhanced_consciousness_tui.py  migrate_orchestrator.py  run_tests.py  run_tui.py  test_database_integration.py  test_monitoring.py  test_monitoring_basic.py  test_monitoring_simple.py
scripts/setup/: setup_databases.py  setup_phase1.py
src/: main.py
src/api/: client.py  server.py
src/consciousness/: stream.py
src/core/: ai_integration.py  communication.py  event_bus.py  monitoring_hooks.py  orchestrator.py  orchestrator_refactored.py  service_registry.py  state_manager.py
src/creative/: __init__.py
src/database/: connections.py  models.py
src/diagnostics/: __init__.py
src/emotional/: __init__.py
src/exploration/: engine.py
src/interface/: consciousness_tui.py
src/learning/: __init__.py
src/memory/: connection_pool.py  manager.py  memory_coordinator.py  synchronizer.py
src/meta/: __init__.py
src/monitoring/: __init__.py  health_checker.py  metrics_collector.py  monitoring_integration.py  prometheus_exporter.py
src/safety/: __init__.py  core_safety.py  enhanced_safety.py  hard_constraints.yaml  memory_validator.py  prompt_sanitizer.py  secure_key_manager.py
src/social/: __init__.py
src/welfare/: __init__.py
tests/: conftest.py
tests/integration/: test_service_integration.py
tests/performance/: test_performance_benchmarks.py
tests/safety/: test_adversarial_safety.py
tests/unit/: test_ai_integration.py  test_api_client.py  test_api_server.py  test_architecture_refactoring.py  test_communication_extended.py  test_consciousness_stream.py  test_database_connections.py  test_enhanced_safety.py  test_exploration_engine.py  test_main.py  test_memory_manager.py  test_memory_manager_coverage_summary.md  test_memory_manager_extended.py  test_memory_synchronizer.py  test_monitoring.py  test_monitoring_fixed.py  test_orchestrator.py  test_orchestrator_security.py  test_prompt_sanitizer.py  test_safety_framework.py  test_secure_key_manager.py
to-dos/: DEFERRED_TEST_IMPLEMENTATIONS.md  MASTER_TODO.md  PHASE_1_COMPLETED.md  PHASE_1_REMAINING_TASKS.md  PHASE_1_TO_2_TRANSITION.md  PHASE_2_ROADMAP.md  TEST_SUITE_FIXES.md
validation/: continuous.py  pre_deployment.py
welfare/: monitor.py
(+6 files in other folders)
